docs/api/qiskit/0.35/qiskit.transpiler.passes.ALAPScheduleAnalysis.mdx
---
title: ALAPScheduleAnalysis (v0.35)
description: API reference for qiskit.transpiler.passes.ALAPScheduleAnalysis in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.ALAPScheduleAnalysis
---

# ALAPScheduleAnalysis

<Class id="qiskit.transpiler.passes.ALAPScheduleAnalysis" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/transpiler/passes/scheduling/scheduling/alap.py" signature="ALAPScheduleAnalysis(durations)" modifiers="class">
  Bases: `qiskit.transpiler.passes.scheduling.scheduling.base_scheduler.BaseScheduler`

  ALAP Scheduling pass, which schedules the **stop** time of instructions as late as possible.

  See `BaseScheduler` for the detailed behavior of the control flow operation, i.e. `c_if`.

  Scheduler initializer.

  **Parameters**

  **durations** (`InstructionDurations`) – Durations of instructions to be used in scheduling

  ## Methods

  <span id="qiskit-transpiler-passes-alapscheduleanalysis-name" />

  ### name

  <Function id="qiskit.transpiler.passes.ALAPScheduleAnalysis.name" signature="ALAPScheduleAnalysis.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-alapscheduleanalysis-run" />

  ### run

  <Function id="qiskit.transpiler.passes.ALAPScheduleAnalysis.run" signature="ALAPScheduleAnalysis.run(dag)">
    Run the ALAPSchedule pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to schedule.

    **Returns**

    A scheduled DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

    **Raises**

    *   [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if the circuit is not mapped on physical qubits.
    *   [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if conditional bit is added to non-supported instruction.
  </Function>

  ## Attributes

  ### CONDITIONAL\_SUPPORTED

  <Attribute id="qiskit.transpiler.passes.ALAPScheduleAnalysis.CONDITIONAL_SUPPORTED" attributeValue="(<class 'qiskit.circuit.gate.Gate'>, <class 'qiskit.circuit.delay.Delay'>)" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.ALAPScheduleAnalysis.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.ALAPScheduleAnalysis.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

